<resources>
    <string name="app_name">MyNYTimes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search NYTimes…</string>
    <string name="menu_search_title">Search</string>
    <string name="menu_settings_title">Settings</string>

    <string name="pref_arts_label">Arts</string>
    <string name="pref_arts_key" translatable="false">arts_key</string>


    <string name="pref_sports_label">Sports</string>
    <string name="pref_sports_key" translatable="false">sports_key</string>

    <string name="pref_fashion_label">Fashion &amp; Style</string>
    <string name="pref_fashion_key" translatable="false">fashion_key</string>

    <string name="pref_subscription_off" translatable="false">UnSubscribed</string>
    <string name="pref_subscription_on" translatable="false">Subscribed</string>


    <!-- Label for list preference -->

    <string name="pref_sort_label">Sort By</string>
    <string name="pref_sort_key" translatable="false">sort_key</string>

    <string name="pref_sort_default_value">newest</string>

    <!-- Label for list preference individual values -->

    <string name="pref_sort_label_older">oldest</string>
    <!-- Value in shared preferences for older option -->
    <string name="pref_sort_older_value" translatable="false">oldest</string>

    <string name="pref_sort_label_newer">newest</string>
    <string name="pref_sort_newer_value" translatable="false">newest</string>

    <string name="pref_news_desk_setting">News Desk</string>
    <string name="pref_sort_order_setting">Sort Order</string>
    <string name="pref_begin_date_setting">Begin Date</string>
    <string name="date_picker_title">Select Begin Date</string>
    <string name="pref_select_begin_date_label">Begin Date</string>
    <string name="pref_select_begin_date_key">begin_date_key</string>
    <string name="trending_news_stories_title">Trending Now</string>
    <string name="subscribed_articles_title">Subscribed News Stories</string>
    <string name="lorem_ipsum">\"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\"</string>
    <string name="all_news_stories_title">All Stories</string>
    <string name="no_more_data">API error. Couldn\'t load more data</string>
    <string name="no_data_to_display">No more results to load</string>
    <string name="published_date">Published date</string>
    <string name="no_internet_dialog_title">Not Connected To Internet !</string>
    <string name="no_internet_dialog_message">Please try connecting to the internet to continue browsing news article</string>
    <string name="connected_to_internet">Connected to internet</string>
    <string name="not_connected_to_internet">Not Connected to Internet</string>
    <string name="begin_date_title">Begin Date</string>
    <string name="sort_order_title">Sort Order</string>
    <string name="news_desk_title">News Desk Values</string>
    <string name="arts_value">Arts</string>
    <string name="fashion_title">Fashion &amp; Style</string>
    <string name="sports_title">Sports</string>
    <string name="modern_overlay_title">Modern Overlay</string>
    <string name="save_settings">Save</string>
    <string name="pref_settings_dialog_title">Modern Overlay</string>
    <string name="pref_settings_dialog_key">settings_dialog_key</string>
    <string name="modelOverlaySummary">Displays a dialog</string>
    <string name="broadcast_event_preference_changed">broadcast_event_preferences_changed</string>
    <string name="has_preference_changed_key">has_preference_changed_key</string>
    <string name="pref_embedded_browser_key"> pref_embedded_browser_key</string>
    <string name="pref_embedded_browser_label">Embedded Browser</string>
    <string name="pref_embedded_browser_summary">Displays Web Pages in embedded browser</string>



</resources>
