<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <CheckBoxPreference
        android:defaultValue="@bool/pref_default_article_value"
        android:key="@string/pref_article_key"
        android:summaryOff="@string/pref_subscription_off"
        android:summaryOn="@string/pref_subscription_on"
        android:title="@string/pref_article_label"
        />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_default_sports_value"
        android:key="@string/pref_sports_key"
        android:summaryOff="@string/pref_subscription_off"
        android:summaryOn="@string/pref_subscription_on"
        android:title="@string/pref_sports_label"
        />

    <CheckBoxPreference
        android:defaultValue="@bool/pref_default_fashion_value"
        android:key="@string/pref_fashion_key"
        android:summaryOff="@string/pref_subscription_off"
        android:summaryOn="@string/pref_subscription_on"
        android:title="@string/pref_fashion_label"
        />

    <ListPreference
        android:defaultValue="@string/pref_sort_older_value"
        android:key="@string/pref_sort_key"
        android:title="@string/pref_sort_label"
        android:entries="@array/pref_sort_option_labels"
        android:entryValues="@array/pref_sort_option_values"
        />



</PreferenceScreen>